--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a class="scroll" href="#">PAGES</a>
+                  <a class="scroll" href="about.html">PAGES</a>
                   <ul>
                     <li><a href=" about.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -109,33 +109,33 @@
                       <a href="blog.html">Masonry</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Standard</a>
+                      <a href="blog.html">Standard</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Single Post</a>
+                      <a href="blog-detail.html">Single Post</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li><a class="scroll" href="#">PORTFOLIO</a></li>
-                <li><a class="scroll" href="#">ELEMENTS</a></li>
+                <li><a class="scroll" href="index.html">PORTFOLIO</a></li>
+                <li><a class="scroll" href="index.html">ELEMENTS</a></li>
               </ul>
             </div>
             <!-- end main -->
@@ -187,7 +187,7 @@
             </ul>
           </li>
           <li class="scroll">
-            <a href="#">PAGES</a>
+            <a href="about.html">PAGES</a>
             <span id="span-3">
               <i class="fas fa-sort-down"></i>
             </span>
@@ -200,49 +200,40 @@
               <li><a href="404.html">404 Error Page</a></li>
             </ul>
           </li>
-          <li class="scroll">
-            <a href="blog.html">BLOG</a>
-            <span id="span-4">
-              <i class="fas fa-sort-down"></i>
-            </span>
-            <ul class="span-4">
+          <li>
+            <a class="scroll" href="blog.html">BLOG</a>
+            <ul>
               <li>
-                <a href="blog-detail.html">Masonry</a>
-                <span id="span-5">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-5">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Masonry</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
-                <a href="blog-detail.html">Standard</a>
-                <span id="span-6">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-6">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Standard</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
                 <a href="blog-detail.html">Single Post</a>
-                <span id="span-7">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-7">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
             </ul>
           </li>
-          <li class="scroll"><a href="#">PORTFOLIO</a></li>
-          <li class="scroll"><a href="#">ELEMENTS</a></li>
+          <li class="scroll"><a href="index.html">PORTFOLIO</a></li>
+          <li class="scroll"><a href="index.html">ELEMENTS</a></li>
         </ul>
       </div>
       <!-- end menu main for tablet and mobile -->
@@ -265,25 +256,21 @@
           <h2>CONTACT</h2>
           <div>
             <a
-              href="https://www.google.com/maps/place/Greenwich+Village,+New+York,+NY,+USA/@40.7337621,-74.0095604,15z/data=!3m1!4b1!4m13!1m7!3m6!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!2sNew+York,+NY,+USA!3b1!8m2!3d40.7127753!4d-74.0059728!3m4!1s0x89c259940c3213a7:0x8882c42182df455f!8m2!3d40.7335719!4d-74.0027418?_ga=2.153491768.1616392348.1616635257-1602379502.1616635257"
+              href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
               target="_blank"
               rel="noopener noreferrer"
-              >9 Crosby Street, New York City, NY</a
+              >Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</a
             >
           </div>
 
           <div>
-            <a href="mailto:fivestar@qodeinteractive.com"
-              >fivestar@qodeinteractive.com</a
-            >
+            <a href="mailto:info@webhotel.vn">info@webhotel.vn</a>
           </div>
-          <div><a href="tel:(646)218-6400">( 646 ) 218-6400</a></div>
+          <div><a href="tel:0242 242 0777">0242 242 0777</a></div>
 
           <div class="footer__contact-icon">
             <i class="fab fa-cc-visa"></i>
             <i class="fab fa-cc-paypal"></i>
-            <i class="fab fa-cc-mastercard"></i>
-            <i class="fab fa-cc-mastercard"></i>
             <i class="fab fa-cc-mastercard"></i>
           </div>
         </div>
@@ -313,7 +300,7 @@
     </section>
 
     <div class="container">
-      <section class="contact-description" data-aos="fade-up">
+      <section class="contact-description">
         <h2>WELLCOME</h2>
         <div class="contact-description__line"></div>
         <p>
@@ -340,7 +327,7 @@
       <section class="contact-contact">
         <div class="container">
           <div class="row">
-            <div class="col-12 col-lg-6" data-aos="fade-right">
+            <div class="col-12 col-lg-6">
               <div class="contact__info">
                 <div class="contact__info-top">
                   <h1>CONTACT US</h1>
@@ -352,29 +339,29 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-12 col-sm-6 company">
-                    <h3>BARCELONA</h3>
+                  <div class="col-12 company">
+                    <h3 style="font-size: 16px; color: #000">
+                      WEBHOTEL - GIẢI PHÁP BÁN PHÒNG CHUYÊN NGHIỆP
+                    </h3>
                     <div class="company__address">
                       <a
                         style="color: #999999"
-                        href="https://www.google.com/maps/place/Carrer+de+la+Diputaci%C3%B3,+316,+08009+Barcelona,+Spain/@41.3943376,2.1704294,17z/data=!3m1!4b1!4m13!1m7!3m6!1s0x12a49816718e30e5:0x44b0fb3d4f47660a!2sBarcelona,+Spain!3b1!8m2!3d41.3850639!4d2.1734035!3m4!1s0x12a4a2ef19d6d3d3:0x2c8581cade97958a!8m2!3d41.3943336!4d2.1726181?_ga=2.151007417.1616392348.1616635257-1602379502.1616635257"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >198 West 21th Street, 721 Barcelona 20020</a
+                        href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
+                        >Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</a
                       >
                     </div>
                     <div class="company__email">
-                      <a href="emailto:fivestar@qode.com" style="color: #999999"
-                        >Email: fivestar@qode.com</a
+                      <a href="mailto:info@webhotel.vn" style="color: #999999"
+                        >Email: info@webhotel.vn</a
                       >
                     </div>
                     <div class="company__phone">
-                      <a style="color: #999999" href="tel:+887678906"
-                        >Phone: +88 (0) 101 0000 000</a
+                      <a style="color: #999999" href="tel:0242 242 0777"
+                        >Phone: 0242 242 0777</a
                       >
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6">
+                  <!-- <div class="col-12 col-sm-6">
                     <h3>NEW YORK</h3>
                     <div class="company__address">
                       <a
@@ -395,10 +382,10 @@
                         >Phone: +88 (0) 101 0000 000</a
                       >
                     </div>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="contact__info-bottom">
-                  <h3>CONNECT WITH US</h3>
+                  <h3 style="font-size: 16px; color: #000">CONNECT WITH US</h3>
                   <div class="contact__info-social">
                     <a href="https://www.twitter.com"
                       ><i class="fab fa-twitter"></i
@@ -416,7 +403,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-6 form-contact" data-aos="fade-left">
+            <div class="col-12 col-lg-6 form-contact">
               <form action="" method="post" id="form-contact">
                 <input type="text" name="name" placeholder="Enter your name" />
                 <input
@@ -465,8 +452,6 @@
               <div class="footer__contact-icon">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-paypal"></i>
-                <i class="fab fa-cc-mastercard"></i>
-                <i class="fab fa-cc-mastercard"></i>
                 <i class="fab fa-cc-mastercard"></i>
               </div>
             </div>
@@ -523,7 +508,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./plugins/masonry/masonry.pkgd.js"></script>
     <script src="./plugins/masonry/imagesloaded.pkgd.js"></script>
     <script src="./plugins/fontawesome/all.js"></script>
@@ -533,11 +517,5 @@
     <script src="./plugins/slick/slick.js"></script>
     <!-- Main JS-->
     <script src="./js/main.js"></script>
-    <script>
-      AOS.init({
-        offset: 400,
-        duration: 1000,
-      });
-    </script>
   </body>
 </html>
