--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,6 @@
     />
 
     <!-- Vendor CSS Files cdn -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -93,7 +92,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a class="scroll" href="#">PAGES</a>
+                  <a class="scroll" href="about.html">PAGES</a>
                   <ul>
                     <li><a href=" about.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -110,33 +109,33 @@
                       <a href="blog.html">Masonry</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Standard</a>
+                      <a href="blog.html">Standard</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Single Post</a>
+                      <a href="blog-detail.html">Single Post</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li><a class="scroll" href="#">PORTFOLIO</a></li>
-                <li><a class="scroll" href="#">ELEMENTS</a></li>
+                <li><a class="scroll" href="index.html">PORTFOLIO</a></li>
+                <li><a class="scroll" href="index.html">ELEMENTS</a></li>
               </ul>
             </div>
             <!-- end main -->
@@ -188,7 +187,7 @@
             </ul>
           </li>
           <li class="scroll">
-            <a href="#">PAGES</a>
+            <a href="about.html">PAGES</a>
             <span id="span-3">
               <i class="fas fa-sort-down"></i>
             </span>
@@ -201,49 +200,40 @@
               <li><a href="404.html">404 Error Page</a></li>
             </ul>
           </li>
-          <li class="scroll">
-            <a href="blog.html">BLOG</a>
-            <span id="span-4">
-              <i class="fas fa-sort-down"></i>
-            </span>
-            <ul class="span-4">
+          <li>
+            <a class="scroll" href="blog.html">BLOG</a>
+            <ul>
               <li>
-                <a href="blog-detail.html">Masonry</a>
-                <span id="span-5">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-5">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Masonry</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
-                <a href="blog-detail.html">Standard</a>
-                <span id="span-6">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-6">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Standard</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
                 <a href="blog-detail.html">Single Post</a>
-                <span id="span-7">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-7">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
             </ul>
           </li>
-          <li class="scroll"><a href="#">PORTFOLIO</a></li>
-          <li class="scroll"><a href="#">ELEMENTS</a></li>
+          <li class="scroll"><a href="index.html">PORTFOLIO</a></li>
+          <li class="scroll"><a href="index.html">ELEMENTS</a></li>
         </ul>
       </div>
       <!-- end menu main for tablet and mobile -->
@@ -266,25 +256,21 @@
           <h2>CONTACT</h2>
           <div>
             <a
-              href="https://www.google.com/maps/place/Greenwich+Village,+New+York,+NY,+USA/@40.7337621,-74.0095604,15z/data=!3m1!4b1!4m13!1m7!3m6!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!2sNew+York,+NY,+USA!3b1!8m2!3d40.7127753!4d-74.0059728!3m4!1s0x89c259940c3213a7:0x8882c42182df455f!8m2!3d40.7335719!4d-74.0027418?_ga=2.153491768.1616392348.1616635257-1602379502.1616635257"
+              href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
               target="_blank"
               rel="noopener noreferrer"
-              >9 Crosby Street, New York City, NY</a
+              >Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</a
             >
           </div>
 
           <div>
-            <a href="mailto:fivestar@qodeinteractive.com"
-              >fivestar@qodeinteractive.com</a
-            >
+            <a href="mailto:info@webhotel.vn">info@webhotel.vn</a>
           </div>
-          <div><a href="tel:(646)218-6400">( 646 ) 218-6400</a></div>
+          <div><a href="tel:0242 242 0777">0242 242 0777</a></div>
 
           <div class="footer__contact-icon">
             <i class="fab fa-cc-visa"></i>
             <i class="fab fa-cc-paypal"></i>
-            <i class="fab fa-cc-mastercard"></i>
-            <i class="fab fa-cc-mastercard"></i>
             <i class="fab fa-cc-mastercard"></i>
           </div>
         </div>
@@ -324,7 +310,7 @@
       </section>
 
       <section class="gallery-image">
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-01.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -335,7 +321,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-02.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -346,7 +332,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-03.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -357,7 +343,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-04.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -368,7 +354,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-05.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -379,7 +365,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-06.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -390,7 +376,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-07.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -401,7 +387,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-08.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -412,7 +398,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-09.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -423,7 +409,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-10.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -434,7 +420,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-11.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -445,7 +431,7 @@
             </div>
           </div>
         </div>
-        <div class="gallery-image__item" data-aos="flip-left">
+        <div class="gallery-image__item">
           <img src="./images/gallery/gallery-12.jpeg" alt="gallery" />
           <div class="grid-hover">
             <div class="grid-hover__text">
@@ -462,7 +448,7 @@
     <div class="footer">
       <div class="container">
         <div class="footer__main">
-          <div class="row">
+          <div class="row gallery-footer">
             <div class="col-12 col-lg-4 d-flex flex-column">
               <h2>CONTACT</h2>
               <a href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
@@ -474,8 +460,6 @@
               <div class="footer__contact-icon">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-paypal"></i>
-                <i class="fab fa-cc-mastercard"></i>
-                <i class="fab fa-cc-mastercard"></i>
                 <i class="fab fa-cc-mastercard"></i>
               </div>
             </div>
@@ -531,7 +515,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./plugins/masonry/masonry.pkgd.js"></script>
     <script src="./plugins/masonry/imagesloaded.pkgd.js"></script>
     <script src="./plugins/fontawesome/all.js"></script>
@@ -541,8 +524,5 @@
     <script src="./plugins/slick/slick.js"></script>
     <!-- Main JS-->
     <script src="./js/main.js"></script>
-    <script>
-      AOS.init();
-    </script>
   </body>
 </html>
