--- a/get-in-touch.html
+++ b/get-in-touch.html
@@ -94,7 +94,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a class="scroll" href="#">PAGES</a>
+                  <a class="scroll" href="about.html">PAGES</a>
                   <ul>
                     <li><a href=" about.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -111,33 +111,33 @@
                       <a href="blog.html">Masonry</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Standard</a>
+                      <a href="blog.html">Standard</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Single Post</a>
+                      <a href="blog-detail.html">Single Post</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li><a class="scroll" href="#">PORTFOLIO</a></li>
-                <li><a class="scroll" href="#">ELEMENTS</a></li>
+                <li><a class="scroll" href="index.html">PORTFOLIO</a></li>
+                <li><a class="scroll" href="index.html">ELEMENTS</a></li>
               </ul>
             </div>
             <!-- end main -->
@@ -189,7 +189,7 @@
             </ul>
           </li>
           <li class="scroll">
-            <a href="#">PAGES</a>
+            <a href="about.html">PAGES</a>
             <span id="span-3">
               <i class="fas fa-sort-down"></i>
             </span>
@@ -202,49 +202,40 @@
               <li><a href="404.html">404 Error Page</a></li>
             </ul>
           </li>
-          <li class="scroll">
-            <a href="blog.html">BLOG</a>
-            <span id="span-4">
-              <i class="fas fa-sort-down"></i>
-            </span>
-            <ul class="span-4">
+          <li>
+            <a class="scroll" href="blog.html">BLOG</a>
+            <ul>
               <li>
-                <a href="blog-detail.html">Masonry</a>
-                <span id="span-5">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-5">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Masonry</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
-                <a href="blog-detail.html">Standard</a>
-                <span id="span-6">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-6">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Standard</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
                 <a href="blog-detail.html">Single Post</a>
-                <span id="span-7">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-7">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
             </ul>
           </li>
-          <li class="scroll"><a href="#">PORTFOLIO</a></li>
-          <li class="scroll"><a href="#">ELEMENTS</a></li>
+          <li class="scroll"><a href="index.html">PORTFOLIO</a></li>
+          <li class="scroll"><a href="index.html">ELEMENTS</a></li>
         </ul>
       </div>
       <!-- end menu main for tablet and mobile -->
@@ -267,25 +258,21 @@
           <h2>CONTACT</h2>
           <div>
             <a
-              href="https://www.google.com/maps/place/Greenwich+Village,+New+York,+NY,+USA/@40.7337621,-74.0095604,15z/data=!3m1!4b1!4m13!1m7!3m6!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!2sNew+York,+NY,+USA!3b1!8m2!3d40.7127753!4d-74.0059728!3m4!1s0x89c259940c3213a7:0x8882c42182df455f!8m2!3d40.7335719!4d-74.0027418?_ga=2.153491768.1616392348.1616635257-1602379502.1616635257"
+              href="https://goo.gl/maps/GYfHbZHnWW73r8Ni7"
               target="_blank"
               rel="noopener noreferrer"
-              >9 Crosby Street, New York City, NY</a
+              >Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</a
             >
           </div>
 
           <div>
-            <a href="mailto:fivestar@qodeinteractive.com"
-              >fivestar@qodeinteractive.com</a
-            >
+            <a href="mailto:info@webhotel.vn">info@webhotel.vn</a>
           </div>
-          <div><a href="tel:(646)218-6400">( 646 ) 218-6400</a></div>
+          <div><a href="tel:0242 242 0777">0242 242 0777</a></div>
 
           <div class="footer__contact-icon">
             <i class="fab fa-cc-visa"></i>
             <i class="fab fa-cc-paypal"></i>
-            <i class="fab fa-cc-mastercard"></i>
-            <i class="fab fa-cc-mastercard"></i>
             <i class="fab fa-cc-mastercard"></i>
           </div>
         </div>
@@ -325,7 +312,7 @@
             <div class="getInTouch-icon__center">
               <h2>ADDRESS</h2>
               <div class="getInTouch-icon__line"></div>
-              <p class="getInTouch-padding">9 Crosby Street, New York, NY<br />10018, United States.</p>
+              <p class="getInTouch-padding">Địa chỉ: Tầng 4, số 147 Mai Dịch, Cầu Giấy, Hà Nội</p>
             </div>
           </div>
         </div>
@@ -337,8 +324,7 @@
             </h2>
               <div class="getInTouch-icon__line"></div>
               <div class="getInTouch-padding">
-                <a href="mailTo:fivestar@qodeinteractive.com">fivestar@qodeinteractive.com</a>
-                <a href="mailTo:fivestar1@qodeinteractive.com">fivestar@qodeinteractive.com</a>
+                <a href="mailto:info@webhotel.vn">info@webhotel.vn</a>
               </div>
               
             </div>
@@ -350,8 +336,8 @@
             <div class="getInTouch-icon__center">
               <h2>CONTACT</h2>
               <div class="getInTouch-icon__line"></div>
-              <div class="getInTouch-padding"> <a href="tel:646/218-6400">646/218-6400</a><br>
-                <a href="tel:212/556-3622">212/556-3622</a></div>
+              <div class="getInTouch-padding">
+                <a href="tel:0242 242 0777">0242 242 0777</a></div>
             </div>
           </div>
         </div>
@@ -359,7 +345,7 @@
     </div>
     </section>
 
-    <section class="getInTouch-google" data-aos="fade-up">
+    <section class="getInTouch-google">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7447.616497995241!2d105.77452570000003!3d21.040357100000012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1svi!2s!4v1617096898283!5m2!1svi!2s"
           width="100%"
@@ -373,7 +359,7 @@
     <section class="getInTouch-contact">
         <div class="container">
             <div class="row">
-              <div class="col-12 col-lg-6" data-aos="fade-right">
+              <div class="col-12 col-lg-6">
                 <div class="contact__info">
                   <div class="contact__info-top">
                     <h1>CONTACT US</h1>
@@ -395,13 +381,13 @@
                        <p>Concierge Manager</p>
                       </div>
                       <div class="company__email">
-                        <a href="emailto:fivestar@qode.com" style="color: #999999"
-                          >Email: fivestar@qode.com</a
+                        <a href="mailto:info@webhotel.vn" style="color: #999999"
+                          >Email: info@webhotel.vn</a
                         >
                       </div>
                       <div class="company__phone">
-                        <a style="color: #999999" href="tel:+887678906"
-                          >Phone: +88 (0) 101 0000 000</a
+                        <a style="color: #999999" href="tel:0242 242 0777"
+                          >Phone: 0242 242 0777</a
                         >
                       </div>
                       <div class="contact__info-bottom">
@@ -426,8 +412,8 @@
                   
                 </div>
               </div>
-              <div class="col-12 col-lg-6 form-contact" data-aos="fade-left">
-                <form action="" method="post" id="form-contact">
+              <div class="col-12 col-lg-6 form-contact">
+                <form action="https://booking-guarantee.com/Home/SelectDate?hotelKey=IIT&lang=en&currency=USD" method="post" id="form-contact">
                   <input type="text" name="name" placeholder="Enter your name" />
                   <input
                     type="text"
@@ -438,7 +424,7 @@
                     name="message"
                     placeholder="Enter your message"
                   ></textarea>
-                  <a href="#"><button type="submit">BOOK NOW</button></a>
+                  <a href="https://booking-guarantee.com/Home/SelectDate?hotelKey=IIT&lang=en&currency=USD"><button type="submit">BOOK NOW</button></a>
                 </form>
               </div>
             </div>
@@ -461,8 +447,6 @@
               <div class="footer__contact-icon">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-paypal"></i>
-                <i class="fab fa-cc-mastercard"></i>
-                <i class="fab fa-cc-mastercard"></i>
                 <i class="fab fa-cc-mastercard"></i>
               </div>
             </div>
@@ -519,7 +503,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./plugins/masonry/masonry.pkgd.js"></script>
     <script src="./plugins/masonry/imagesloaded.pkgd.js"></script>
     <script src="./plugins/fontawesome/all.js"></script>
@@ -530,11 +513,5 @@
 
     <!-- Main JS-->
     <script src="./js/main.js"></script>
-    <script>
-      AOS.init({
-        offset: 400,
-        duration: 1000,
-      });
-    </script>
   </body>
 </html>
