--- a/index.html
+++ b/index.html
@@ -329,7 +329,12 @@
           <div class="home-filter__item">
             <span class="has-calendar">
               <label for="">Check - in:</label>
-              <input type="text" name="checkIn" value="3/30/2021" />
+              <input
+                type="text"
+                name="checkIn"
+                value="3/30/2021"
+                id="current-date"
+              />
             </span>
           </div>
           <div class="home-filter__item">
@@ -353,6 +358,7 @@
                 <option value="9">9</option>
                 <option value="10">10</option>
               </select>
+              <i class="fas fa-sort-down"></i>
             </span>
           </div>
           <div class="home-filter__item">
@@ -367,6 +373,7 @@
                 <option value="6">Paris</option>
                 <option value="7">Rome</option>
               </select>
+              <i class="fas fa-sort-down"></i>
             </span>
           </div>
           <div class="home-filter__item">
@@ -382,6 +389,7 @@
                 <option value="7">7</option>
                 <option value="8">8</option>
               </select>
+              <i class="fas fa-sort-down"></i>
             </span>
           </div>
           <div class="home-filter__item">
@@ -396,6 +404,7 @@
                 <option value="6">6</option>
                 <option value="7">7</option>
               </select>
+              <i class="fas fa-sort-down"></i>
             </span>
           </div>
           <a
