--- a/single-room.html
+++ b/single-room.html
@@ -98,7 +98,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a class="scroll" href="#">PAGES</a>
+                  <a class="scroll" href="about.html">PAGES</a>
                   <ul>
                     <li><a href=" about.html">About Us</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
@@ -115,33 +115,33 @@
                       <a href="blog.html">Masonry</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
-                        <li><a href="blog.html">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Standard</a>
+                      <a href="blog.html">Standard</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                     <li>
-                      <a href="#">Single Post</a>
+                      <a href="blog-detail.html">Single Post</a>
                       <span><i class="fas fa-caret-right"></i></span>
                       <ul>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
-                        <li><a href="#">Lorem ipsum</a></li>
+                        <li><a href="blog-detail.html">Catering</a></li>
+                        <li><a href="blog-detail.html">Special Desserts</a></li>
+                        <li><a href="blog-detail.html">Happy mornings</a></li>
                       </ul>
                     </li>
                   </ul>
                 </li>
-                <li><a class="scroll" href="#">PORTFOLIO</a></li>
-                <li><a class="scroll" href="#">ELEMENTS</a></li>
+                <li><a class="scroll" href="index.html">PORTFOLIO</a></li>
+                <li><a class="scroll" href="index.html">ELEMENTS</a></li>
               </ul>
             </div>
             <!-- end main -->
@@ -193,7 +193,7 @@
             </ul>
           </li>
           <li class="scroll">
-            <a href="#">PAGES</a>
+            <a href="about.html">PAGES</a>
             <span id="span-3">
               <i class="fas fa-sort-down"></i>
             </span>
@@ -206,49 +206,40 @@
               <li><a href="404.html">404 Error Page</a></li>
             </ul>
           </li>
-          <li class="scroll">
-            <a href="blog.html">BLOG</a>
-            <span id="span-4">
-              <i class="fas fa-sort-down"></i>
-            </span>
-            <ul class="span-4">
+          <li>
+            <a class="scroll" href="blog.html">BLOG</a>
+            <ul>
               <li>
-                <a href="blog-detail.html">Masonry</a>
-                <span id="span-5">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-5">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Masonry</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
-                <a href="blog-detail.html">Standard</a>
-                <span id="span-6">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-6">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <a href="blog.html">Standard</a>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
               <li>
                 <a href="blog-detail.html">Single Post</a>
-                <span id="span-7">
-                  <i class="fas fa-sort-down"></i>
-                </span>
-                <ul class="span-7">
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                <span><i class="fas fa-caret-right"></i></span>
+                <ul>
+                  <li><a href="blog-detail.html">Catering</a></li>
+                  <li><a href="blog-detail.html">Special Desserts</a></li>
+                  <li><a href="blog-detail.html">Happy mornings</a></li>
                 </ul>
               </li>
             </ul>
           </li>
-          <li class="scroll"><a href="#">PORTFOLIO</a></li>
-          <li class="scroll"><a href="#">ELEMENTS</a></li>
+          <li class="scroll"><a href="index.html">PORTFOLIO</a></li>
+          <li class="scroll"><a href="index.html">ELEMENTS</a></li>
         </ul>
       </div>
       <!-- end menu main for tablet and mobile -->
@@ -363,8 +354,11 @@
               <div class="row">
                 <div class="col-12 col-md-4">
                   <ul class="nav nav-tabs d-block">
-                    <li class="active">
-                      <a data-toggle="tab" href="#detail" class="font-style"
+                    <li>
+                      <a
+                        data-toggle="tab"
+                        href="#detail"
+                        class="font-style active"
                         >ROOM DETAIL</a
                       >
                     </li>
