--- a/standard-room-list.html
+++ b/standard-room-list.html
@@ -381,7 +381,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>SINGLE APARTMENT</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -414,7 +414,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>DOUBLE SUITE</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -447,7 +447,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>HONEYMOON SUITE</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -480,7 +480,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>SIMPLE SUITE</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -513,7 +513,7 @@
                         >
                       </div>
                       <div class="rooms__content">
-                        <a href="single-room.html"><h1>DOUBLE APARTMENT</h1></a>
+                        <a href="single-room.html"><h1>ROMANTIC SUITE</h1></a>
                         <div class="rooms__line"></div>
                         <p class="rooms__padding">
                           Donec quam felis, ultricies nec, pellentesque eu,
@@ -703,7 +703,7 @@
                 </div>
               </div>
               <div class="rooms-priceRange">
-                <p>Price from $0 to $<span id="price"></span></p>
+                <p>Price from $0 to $<span id="price">100</span></p>
                 <input type="range" class="form-range" min="0" max="100" value="100" id="input-rooms">
                 </div>
                 <div class="rooms-btn">
@@ -732,8 +732,6 @@
               <div class="footer__contact-icon">
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-paypal"></i>
-                <i class="fab fa-cc-mastercard"></i>
-                <i class="fab fa-cc-mastercard"></i>
                 <i class="fab fa-cc-mastercard"></i>
               </div>
             </div>
@@ -798,20 +796,8 @@
     <script src="./plugins/validation1.19.3/jquery.validate.min.js"></script>
     <script src="./plugins/rating/rating.js"></script>
     <script src="./plugins/slick/slick.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JS-->
     <script src="./js/single-room.js"></script>
     <script src="./js/main.js"></script>
-    <script>
-      AOS.init({
-        offset: 400,
-        duration: 1000,
-      });
-      document.onreadystatechange = function () {
-        if (document.readyState == "complete") {
-          AOS.refresh();
-        }
-      };
-    </script>
   </body>
 </html>
